<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Disciplinas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_alt_disciplina">Cadastro de disciplina</string>
    <string name="title_activity_list_disciplina">Lista de disciplinas</string>
    <string name="strEditar">Editar</string>
    <string name="strExcluir">Excluir</string>
    <string name="strDescricao">Descrição</string>
    <string name="strListaDeDisciplinas">Lista de disciplinas</string>
    <string name="strNovaDisciplina">Nova disciplina</string>
    <string name="strSalvar">Salvar</string>
    <string name="strCancelar">Cancelar</string>
    <string name="strListaVazia">Nenhuma disciplina</string>
    <string name="strDisponiveis">Disciplinas disponíveis</string>
    <string name="strConcluidas">Disciplinas concluídas</string>

</resources>
