<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/btIncluir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btIncluirClick"
            android:text="@string/strNovaDisciplina" />

    </LinearLayout>

    <Button
        android:id="@+id/btListar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btListarClick"
        android:text="@string/strListaDeDisciplinas" />

    <Button
        android:id="@+id/btConcluidas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btConcluidaClick"
        android:text="@string/strConcluidas" />

    <Button
        android:id="@+id/btDisponivel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="btDisponivelClick"
        android:text="@string/strDisponiveis" />

</LinearLayout>
